--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Yao Zheng"
   avatar           : "profile.jpg"
   bio              : "Assistant Professor"
-  location         : "Storrs, CT"
-  employer         : "University of Connecticut"
+  location         :  # "Storrs, CT"
+  employer         :  # "University of Connecticut"
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=q-04N2cAAAAJ&hl=en"
   email            : "yao.zheng@uconn.edu"
