--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yao Zheng"
   avatar           : "profile.jpg"
-  bio              : "Assistant Professor"
+  bio              :  # "Assistant Professor"
   location         :  # "Storrs, CT"
   employer         :  # "University of Connecticut"
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
