--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Yao Zheng"
   avatar           : "profile.jpg"
   bio              :  # "Assistant Professor"
-  location         :  "Room 307, Philip E. Austin Building,\ 
-                       215 Glenbrook Rd. U-4120, Storrs, CT 06269"
+  location         :  "Rm 307, Philip E. Austin Blg,\ 
+                       215 Glenbrook Rd U-4120, Storrs, CT 06269"
   employer         :  # "University of Connecticut"
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=q-04N2cAAAAJ&hl=en"
