--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Yao Zheng"
   avatar           : "profile.jpg"
-  bio              :  # "Assistant Professor"
-  location         :  "Rm 307, Philip E. Austin Blg"
+  bio              : ""
+  location         : "Rm 307, Philip E. Austin Blg"
   employer         :  # "University of Connecticut"
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=q-04N2cAAAAJ&hl=en"
