--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main:
 
-  - title: "CV"
-    url: /cv/
+  - title: "Biography"
+    url: /biography/
     
   - title: "Research"
     url: /research/
