--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/yao-zheng-uconn/"
+  linkedin         : "yao-zheng-uconn"
   orcid            : "https://orcid.org/0000-0002-9257-0486"
   pinterest        :
   soundcloud       :
