--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Yao Zheng"
   avatar           : "profile.jpg"
   bio              : ""
-  location         :  "Office: AUST 307"
+  location         :  "Rm 307, Philip E. Austin Blg"
   employer         :  # "University of Connecticut"
   pubmed           :  # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=q-04N2cAAAAJ&hl=en"
