--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 # main links links
 main:
 
-  - title: "Biography"
-    url: /biography/
+  # - title: "Biography"
+    # url: /biography/
     
   - title: "Research"
     url: /research/
