--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,11 +4,11 @@ main:
   # - title: "Biography"
     # url: /biography/
     
-  - title: "Research"
-    url: /research/
+  # - title: "Research"
+    # url: /research/
 
-  # - title: "Publications"
-    # url: /publications/      
+  - title: "Publications"
+    url: /publications/      
     
   - title: "Team"
     url: /team/
