--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,10 @@ main:
     # url: /research/
 
   - title: "Publications"
-    url: /publications/      
+    url: /publications/   
+
+  - title: "Talks"
+    # url: /talks/   
     
   - title: "Team"
     url: /team/
@@ -19,5 +22,4 @@ main:
   - title: "Teaching"
     url: /teaching/ 
     
-  # - title: "Guide"
-    # url: /markdown/
+
