--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
     url: /publications/   
 
   - title: "Talks"
-    # url: /talks/   
+    url: /talks/   
     
   - title: "Team"
     url: /team/
